fix: change container style

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -81,6 +81,7 @@ section, .section {
   position: relative;
   max-width: $desktopWidth;
   margin: 0 auto;
+  padding: 0 15px;
   @media screen and (max-width: $smDesktopWidth) {
     max-width: $tableWidth;
   }
