--- a/assets/scss/common/title.scss
+++ b/assets/scss/common/title.scss
@@ -1,6 +1,7 @@
 .title {
-  margin-bottom: 20px;
+  margin: 16px 0;
   color: #333333;
-  font-size: 30px;
+  font-size: 24px;
   font-weight: 700;
+  line-height: 1.2;
 }
